--- a/house-data.html
+++ b/house-data.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <div>
+        <div class="logoContainer">
             <img class="logo" src='images/366c1da9-4401-4ec4-9d5e-4ee625551662.png' alt="logo">
         </div>
     </header>
